<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage"
    android:background="#A823A7D8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about3"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about4"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about5"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about6"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about7"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about8"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about9"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about10"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about11"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about12"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about13"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Follow us:"
                android:textSize="40dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/insta"
                android:layout_width="449dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/insta" />

            <ImageView
                android:id="@+id/twiter"
                android:layout_width="449dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/twitter" />
            <ImageView
                android:id="@+id/fb"
                android:layout_width="449dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/facebook" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>